--- a/src/app/data-binding/data-binding.component.css
+++ b/src/app/data-binding/data-binding.component.css
@@ -2,35 +2,17 @@ body {
     margin: 0;
     padding: 0;
     background-image: url("http://wisesale.com.br/assets/images/banner/banner1.jpg");
-    height: 760px;
+    height: 800px;
 }
 section {
     background-color: #5275a1;
-    width: 80%;
-    padding: 1%;
-    border-radius: 1em;
+    padding: 2rem;
+    border-radius: 1rem;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 8%;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
+    margin-top: 10rem;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
-.campo {
-    border-radius: 10px;
-    text-align: center;
-    padding: 3px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-h1 {
-    text-align: center;
-    font-size: 3em;
-}
-h2 {
-    text-align: center;
-    font-size: 2em;
-}
-h3 {
-    text-align: center;
-    font-size: 1em;
+#entrar {
+    border-radius: 1rem;
 }
