--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,7 +1,8 @@
+
 body {
     margin: 0;
     padding: 0;
-    background-image: url("http://wisesale.com.br/assets/images/banner/banner1.jpg");
+    background-image: linear-gradient(135deg, #83C3FF, #5994FF); 
     height: 800px;
 }
 section {
@@ -10,9 +11,14 @@ section {
     border-radius: 1rem;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10rem;
+    margin-top: 8rem;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 #entrar {
     border-radius: 1rem;
+}
+#login {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
