--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -34,5 +34,6 @@
                 <p class="flow-text" *ngIf="login == 'Bruno' && senha == 1234">Seja bem vindo ao Wise ERP!</p>
             </section>
         </div>
-    </body>
+        </body>
+        <footer class="white-text">Desenvolvido por <img class="responsive-img" src="https://wisecommerce-compuwise.azurewebsites.net/images/logo-signature.png"></footer>
 </html>
