--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -21,3 +21,8 @@ section {
     margin-left: auto;
     margin-right: auto;
 }
+footer {
+    background-color: black;
+    text-align: center;
+    padding: 1rem;
+}
