--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -13,7 +13,7 @@ section {
     margin-top: 8rem;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
-#entrar {
+#voltar {
     border-radius: 1rem;
 }
 #login {
