--- a/src/app/home/login/login.component.css
+++ b/src/app/home/login/login.component.css
@@ -4,7 +4,7 @@ body {
     background-image: linear-gradient(135deg, #83C3FF, #5994FF); 
     height: 725px;
 }
-section {
+form {
     background-color: #5275a1;
     padding: 1.5rem;
     border-radius: 1rem;
