--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -12,7 +12,7 @@
         </nav>
         <div id="login" class="valign-wrapper">
             <section class="light-blue darken-3 white-text">
-                <h6 class="flow-text">Dashboard</h6>
+                <h6 class="flow-text">WE_invoices</h6>
                 <a id="voltar" type="submit" (click)="voltarAoLogin()" class="waves-effect waves-light btn"><i class="material-icons right">send</i>Voltar</a>
             </section>
         </div>
