--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -14,33 +14,49 @@
         </div>
         </nav>
         <div id="login" class="valign-wrapper">
-            <form [formGroup]="loginForm" class="light-blue darken-3 white-text">
+            <form 
+            [formGroup]="loginForm" 
+            class="light-blue darken-3 white-text"
+            (submit)="fazerLogin()"
+            >
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="tiny material-icons prefix">account_box</i>
                         <input formControlName="user" 
-                        [(ngModel)]="usuario" 
+                        autofocus
                         id="Login" 
                         type="text" 
                         (change)="usuario = $event.target.value" 
                         class="white-text">
                         <label for="Login">Usuário</label>
+                        <blockquote 
+                        *ngIf="loginForm.get('user').errors?.required" 
+                        class="flow-text red-text text-lighten-2">
+                            Usuário é obrigatório
+                            <i class="small material-icons">announcement</i>
+                        </blockquote>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="tiny material-icons prefix">lock</i>
                         <input formControlName="password" 
-                        [(ngModel)]="senha" 
                         id="senha" type="password" 
                         (change)="senha = $event.target.value" 
                         class="white-text">
                         <label for="senha" class="password">Senha</label>
+                        <blockquote 
+                        *ngIf="loginForm.get('password').errors?.required" 
+                        class="flow-text red-text text-lighten-2">
+                            Senha é obrigatória
+                            <i class="small material-icons">announcement</i>
+                        </blockquote>
                     </div>
                 </div>
-                <button id="entrar" 
+                <button 
+                [disabled]="loginForm.invalid"
+                id="entrar" 
                 type="submit" 
-                (click)="onSubmit()" 
                 class="waves-effect waves-light btn">
                 <i class="material-icons right">send</i>Login</button>
                 <!-- <p class="flow-text" *ngIf="this.login[0].ok === true">Seja bem vindo ao Wise ERP!</p>
