--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -17,7 +17,7 @@
             <form 
             [formGroup]="loginForm" 
             class="light-blue darken-3 white-text"
-            (submit)="fazerLogin()"
+            (submit)="onSubmit()"
             >
                 <div class="row">
                     <div class="input-field col s12">
