--- a/src/app/invoices/invoices.component.css
+++ b/src/app/invoices/invoices.component.css
@@ -1,38 +1,134 @@
-body {
+/* NORMALIZE */
+* {
     margin: 0;
     padding: 0;
-    /* background-image: linear-gradient(135deg, #83C3FF, #5994FF); */
+}
+/* CONTENT */
+body {
+    width: 100%;
+    height: 100%;
     background-color: #fff;
-    height: 725px;
 }
-section {
-    background-color: #5275a1;
-    padding: 1.5rem;
-    border-radius: 1rem;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-}
-#botao {
-    border-radius: 1rem;
-}
-#botao-buscar {
-    border-radius: 1rem;
-    margin-top: 1.5rem;
-}
-#conteudo {
-    padding: 1.5rem;
-}
-#tabela {
-    margin-bottom: 1rem;
+#content {
+    width: 85%;
+    margin-left: 15%;
+    padding: 5px;
 }
 #titulo {
+    margin-top: 5% 0;
+    font-size: 3rem;
+    font-style: bolder;
     text-align: center;
 }
-footer {
+#formulario {
+    margin: 5% 0;
+}
+#tabela {
+    margin: 5% 0;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(151, 151, 151, 0.5);
+}
+#titulos-tabela {
+    color: #fff;
     background-color: #1e366c;
-    text-align: center;
-    padding: 1rem;
 }
+#razao_social {
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(151, 151, 151, 0.5);
+}
+#cnpj {
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(151, 151, 151, 0.5);
+}
+
+/* FORM */
+/* label color */
+.input-field label {
+    color: #000;
+  }
+  /* label focus color */
+  .input-field input[type=text]:focus + label {
+    color: #00aaff;
+    font-style: bolder;
+  }
+  /* label underline focus color */
+  .input-field input[type=text]:focus {
+    border-bottom: 1px solid #00aaff;
+    box-shadow: 0 1px 0 0 #0277b1;
+  }
+ /* BUTTON */
+ .btn {
+    background-color: #1e366c;
+}
+.btn:hover {
+    background-color: #00aaff;
+}
+/* SIDEBAR */
+/* The side navigation menu */
+.sidebar {
+    margin: 0;
+    padding: 0;
+    width: 15%;
+    background-color: #1e366c;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+  }
+
+  #logo {
+    background-color: white;
+    width: 100%;
+    padding: 5px;
+  }
+  
+  /* Sidebar links */
+  .sidebar a {
+    display: block;
+    color: white;
+    padding: 16px;
+    text-decoration: none;
+  }
+  
+  /* Active/current link */
+  .sidebar a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  /* Links on mouse-over */
+  .sidebar a:hover:not(.active) {
+    background-color: #00aaff;
+    color: white;
+  }
+  
+  /* On screens that are less than 700px wide, make the sidebar into a topbar */
+  @media screen and (max-width: 700px) {
+    .sidebar {
+      width: 100%;
+      height: auto;
+      position: relative;
+    }
+    .sidebar a {
+        float: right;
+    }
+    #logo {
+        width: 250px;
+        float: left;
+    }
+    #content {
+        width: 100%;
+        margin-left: 0;
+    }
+  
+  }
+    
+  /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
+  @media screen and (max-width: 400px) {
+    .sidebar a {
+      text-align: center;
+      float: none;
+    }
+  }
