--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -2,56 +2,57 @@
     <head>
     </head>
     <body>
-        <nav>
-        <div class="nav-wrapper light-blue darken-3">
-            <a id="logo"><img src="https://i.ibb.co/wszdgT7/wise-erp-logo.png" alt="wise-erp-logo" class="brand-logo center"/></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <!-- <li><a href="#">Exemplo</a></li> -->
-            </ul>
+
+        <!-- SIDEBAR -->
+        <div class="sidebar">
+            <img id="logo" src="https://i.ibb.co/wszdgT7/wise-erp-logo.png" alt="wise-erp-logo"/>            
+            <a href="#">Sair</a>
+            <a href="/invoices">WE_invoices</a>
         </div>
-        </nav>
-        <div class="row">
-            <section id="conteudo" class="light-blue darken-3 white-text col s10 offset-s1 m8 offset-m2 l6 offset-l3">
-                <h6 id="titulo" class="flow-text">WE_invoices</h6>
-                <div class="row">
-                    <div class="input-field col s8">
-                        <input 
-                        id="buscar" 
-                        class="white-text flow-text" 
+
+        <!-- CONTENT -->
+        <div id="content" class="row">
+            <h6 id="titulo" class="flow-text">WE_invoices</h6>
+                
+                <!-- FORM -->
+                <div id="formulario">
+                    <div class="input-field col s8 m7 l4 offset-m1 offset-l3">
+                        <input id="buscar" 
+                        class="input-field inline" 
                         type="text"
-                        (keyup)="cnpjDigitado = $event.target.value"
-                        >
-                        <label for="buscar">Consulta por CNPJ</label>
+                        (keyup)="cnpjDigitado = $event.target.value">
+                        <label for="buscar">Consultar CNPJ</label>
+                        <span class="helper-text">Digite apenas números</span>
                     </div>
-                    <a 
-                    id="botao-buscar" 
+                    
+                    <!-- BUTTON -->
+                    <a id="botao-buscar" 
                     type="submit" 
-                    class="waves-effect waves-light btn col s4"
+                    class="waves-effect waves-light btn col s4 m3 l2"
                     (click)="filtro = cnpjDigitado">
                     <i class="material-icons right">search</i>Buscar</a>
+                </div>            
+                
+                <!-- TABLE -->
+                <div class="col s12 m10 l8 offset-m1 offset-l2">
+                    <table id="tabela" class="highlight">
+                        <thead>
+                            <tr id="titulos-tabela">
+                                <th id="razao_social">Razão Social</th>
+                                <th id="cnpj">CNPJ</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr *ngFor="let cliente of clientes">
+                            <td id="razao_social" *ngIf="cliente.cnpj == filtro"> {{ cliente.razao_social }} </td>
+                            <td id="cnpj" *ngIf="cliente.cnpj == filtro"> {{ cliente.cnpj }} </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-                <table id="tabela" class="highlight">
-                    <thead>
-                      <tr>
-                          <th>Razão Social</th>
-                          <th>CNPJ</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let cliente of clientes">
-                        <td *ngIf="cliente.cnpj == filtro"> {{ cliente.razao_social }} </td>
-                        <td *ngIf="cliente.cnpj == filtro"> {{ cliente.cnpj }} </td>
-                      </tr>
-                    </tbody>
-                </table>
-                <a 
-                id="botao" 
-                type="submit" 
-                (click)="voltarAoLogin()" 
-                class="waves-effect waves-light btn col s4 offset-s4">
-                <i class="material-icons right">send</i>Voltar</a>
-            </section>
         </div>
-        </body>
-        <footer class="white-text">Desenvolvido por &nbsp;<img src="https://wisecommerce-compuwise.azurewebsites.net/images/logo-signature.png"></footer>
+
+    </body>
+
 </html>
