--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -5,7 +5,7 @@
 
         <!-- SIDEBAR -->
         <div class="sidebar">
-            <img id="logo" src="https://i.ibb.co/wszdgT7/wise-erp-logo.png" alt="wise-erp-logo"/>            
+            <img id="logo" href="#" src="https://i.ibb.co/wszdgT7/wise-erp-logo.png" alt="wise-erp-logo"/>            
             <a href="#">Sair</a>
             <a href="/invoices">WE_invoices</a>
         </div>
