--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -2,26 +2,17 @@
     <head>
     </head>
     <body>
-        <nav>
-        <div class="nav-wrapper light-blue darken-3">
-            <a id="logo">
-                <img src="https://i.ibb.co/wszdgT7/wise-erp-logo.png" 
-                alt="wise-erp-logo" 
-                class="brand-logo center"/></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <!-- <li><a href="#">Exemplo</a></li> -->
-            </ul>
-        </div>
-        </nav>
         <div class="row">
             <form 
             id="formulario"
             [formGroup]="loginForm" 
-            class="light-blue darken-3 white-text col s8 offset-s2 m6 offset-m3 l4 offset-l4"
-            (submit)="onSubmit()"
-            >
+            class="col s10 m6 l4 offset-s1 offset-m3 offset-l4"
+            (submit)="onSubmit()">
+                <div id="logo">
+                    <img src="https://i.ibb.co/wszdgT7/wise-erp-logo.png" alt="wise-erp-logo" class="responsive-img">
+                </div>
                 <div class="row">
-                    <div class="input-field col s10 offset-s1">
+                    <div class="input-field col s10  offset-s1">
                         <i class="tiny material-icons prefix">account_box</i>
                         <input 
                         class="form-group"
@@ -35,7 +26,7 @@
                         <div
                         id="mensagem"
                         *ngIf="loginForm.get('user').errors?.required && loginForm.get('user').touched" 
-                        class="flow-text red-text text-lighten-2">
+                        class="flow-text white-text">
                             Usuário é obrigatório
                             <i class="tiny material-icons">announcement</i>
                         </div>
@@ -53,7 +44,7 @@
                         <div
                         id="mensagem"
                         *ngIf="loginForm.get('password').errors?.required && loginForm.get('password').touched" 
-                        class="flow-text red-text text-lighten-2">
+                        class="flow-text white-text">
                             Senha é obrigatória
                             <i class="tiny material-icons">announcement</i>
                         </div>
@@ -62,15 +53,10 @@
                     [disabled]="loginForm.invalid"
                     id="entrar" 
                     type="submit" 
-                    class="waves-effect waves-light btn col s6 offset-s3">
+                    class="waves-effect waves-light btn col s10 m6 l4 offset-s1 offset-m3 offset-l4">
                     <i class="material-icons right">send</i>Login</button>
-                    <!-- <p class="flow-text" *ngIf="this.login[0].ok === true">Seja bem vindo ao Wise ERP!</p>
-                    <p class="flow-text" *ngIf="this.login[0].ok === false">Login ou senha incorreta!</p> -->
                 </div>
             </form>
         </div>
-        <footer class="white-text">Desenvolvido por &nbsp;
-            <img src="https://wisecommerce-compuwise.azurewebsites.net/images/logo-signature.png">
-        </footer>
-        </body>
+    </body>
 </html>
