--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     </head>
-    <body>
+    <body>       
         <div class="row">
             <form 
             id="formulario"
@@ -58,5 +58,14 @@
                 </div>
             </form>
         </div>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                var elems = document.querySelectorAll('.modal');
+                var instances = M.Modal.init(elems, options);
+            });
+            // $(document).ready(function(){
+            //     $('.modal').modal();
+            // });
+        </script>
     </body>
 </html>
