--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     </head>
-    <body>
+    <!-- <body>
         <nav>
         <div class="nav-wrapper light-blue darken-3">
             <a id="logo">
@@ -9,12 +9,11 @@
                 alt="wise-erp-logo" 
                 class="brand-logo center"/></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <!-- <li><a href="#">Exemplo</a></li> -->
             </ul>
         </div>
         </nav>
         <div id="login" class="valign-wrapper">
-        <div class="row">
+        <div class="row"> -->
     <body>       
         <div class="row">
             <form 
