--- a/src/app/invoices/invoices.component.css
+++ b/src/app/invoices/invoices.component.css
@@ -45,9 +45,67 @@ body {
 } 
 
 /* DROPDOWNS */
-#marca {
+.mat-form-field {
   margin-top: 5%;
+  margin-right: 1rem;
 }
+#marca, #colecao, #representante {
+  width: 100px;
+}
+
+
+
+
+
+
+
+.example-container {
+  margin-top: 5%;
+  height: 450px;
+  width: 800px;
+  overflow: auto;
+}
+
+table {
+  width: 800px;
+}
+
+td.mat-column-star {
+  width: 20px;
+  padding-right: 8px;
+}
+
+th.mat-column-position, td.mat-column-position {
+  padding-left: 8px;
+}
+
+th, td {
+  border-right: 1px solid #e0e0e0;
+  border-left: 1px solid #e0e0e0;
+  text-align: center;
+
+}
+
+.mat-table-sticky:first-child {
+  border-right: 1px solid #e0e0e0;
+}
+
+.mat-table-sticky:last-child {
+  border-left: 1px solid #e0e0e0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* FORM */
 /* label color */
 .input-field label {
@@ -129,6 +187,11 @@ body {
         width: 100%;
         margin-left: 0;
     }
+
+    .example-container {
+      height: 300px;
+    }
+    
   
   }
     
