--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -9,31 +9,47 @@
             <a href="#">Sair</a>
             <a href="/invoices">WE_invoices</a>
         </div>
-        </nav>
-        <div id="login" class="valign-wrapper">
+        <!-- <div id="login" class="valign-wrapper">
             <section class="light-blue darken-3 white-text">
                 <h6 class="flow-text">WE_invoices</h6>
                 <a id="voltar" type="submit" (click)="voltarAoLogin()" class="waves-effect waves-light btn"><i class="material-icons right">send</i>Voltar</a>
-            </section>
+            </section> -->
 
         <!-- CONTENT -->
         <div id="content" class="row">
             <h6 id="titulo" class="flow-text">WE_invoices</h6>
                  
                 <!-- DROPDOWNS -->
-                <div id="marca" class="col s8 m7 l4 offset-m1 offset-l3">
-                    <mat-form-field>
+                <div class="col s12 m6 l8 offset-l3">
+
+                    <mat-form-field id="marca">
                         <mat-label>Marca</mat-label>
                         <mat-select>
-                            <mat-option>Nenhuma</mat-option>
+                            <mat-option>Todas</mat-option>
                             <mat-option *ngFor="let marca of marcas" value="marca.brand_name">{{ marca.brand_name }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                
+                    <mat-form-field id="colecao">
+                        <mat-label>Coleção</mat-label>
+                        <mat-select>
+                            <mat-option>Todas</mat-option>
+                            <mat-option *ngFor="let colecao of colecoes" value="colecao.collection_name">{{ colecao.collection_name }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+
+                    <mat-form-field id="colecao">
+                        <mat-label>Representante</mat-label>
+                        <mat-select>
+                            <mat-option>Todos</mat-option>
+                            <mat-option *ngFor="let repre of repres" value="repre.agent_name">{{ repre.agent_name }}</mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
 
                 <!-- FORM -->
                 <div id="formulario">
-                    <div class="input-field col s8 m7 l4 offset-m1 offset-l3">
+                    <div class="input-field col s7 m7 l4 offset-m1 offset-l3">
                         <input id="buscar" 
                         class="input-field inline" 
                         type="text"
@@ -45,16 +61,16 @@
                     <!-- BUTTON -->
                     <a id="botao-buscar" 
                     type="submit" 
-                    class="waves-effect waves-light btn col s4 m3 l2"
+                    class="waves-effect waves-light btn col s5 m3 l2"
                     (click)="company_doc = cnpjDigitado"
                     (click)="buscarCnpj()"
-                    (click)="listaDeMarcas()">
-                    (click)="buscarCnpj()">
+                    (click)="listaDeMarcas()"
+                    (click)="listaDeColecoes()">
                     <i class="material-icons right">search</i>Buscar</a>
                 </div>            
 
                 <!-- TABLE -->
-                <div class="col s12 m10 l8 offset-m1 offset-l2">
+                <!-- <div class="col s12 m10 l8 offset-m1 offset-l2">
                     <table id="tabela" class="highlight">
                         <thead>
                             <tr id="titulos-tabela">
@@ -63,14 +79,110 @@
                             </tr>
                         </thead>
                         <tbody *ngIf="clienteValido == true">
-                        <tbody>
                             <tr>
                                 <td id=""> {{ clientes.customer_name }} </td>
                                 <td id=""> {{ clientes.customerFab_Id }} </td>
                             </tr>
                         </tbody>
                     </table>
+                </div> -->
+
+
+
+                <div class="example-container mat-elevation-z8 col s12">
+  
+                    <table mat-table [dataSource]="dataSource" >
+                        <!-- cnpj Column -->
+                        <ng-container matColumnDef="cnpj">
+                            <th mat-header-cell *matHeaderCellDef> CNPJ </th>
+                            <td mat-cell *matCellDef="let element"> {{element.cnpj}} </td>
+                        </ng-container>
+                        
+                        <!-- pedido_linx Column -->
+                        <ng-container matColumnDef="pedido_linx">
+                            <th mat-header-cell *matHeaderCellDef> PEDIDO_LINX </th>
+                            <td mat-cell *matCellDef="let element"> {{element.pedido_linx}} </td>
+                        </ng-container>
+                        
+                        <!-- pedido_wise Column -->
+                        <ng-container matColumnDef="pedido_wise">
+                            <th mat-header-cell *matHeaderCellDef> PEDIDO_WISE </th>
+                            <td mat-cell *matCellDef="let element"> {{element.pedido_wise}} </td>
+                        </ng-container>
+                        
+                        <!-- nf Column -->
+                        <ng-container matColumnDef="nf">
+                            <th mat-header-cell *matHeaderCellDef> NF </th>
+                            <td mat-cell *matCellDef="let element"> {{element.nf}} </td>
+                        </ng-container>
+
+                        <!-- dt_faturamento Column -->
+                        <ng-container matColumnDef="dt_faturamento">
+                            <th mat-header-cell *matHeaderCellDef> DATA_DE_FATURAMENTO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.dt_faturamento}} </td>
+                        </ng-container>
+
+                        <!-- dt_fat_relat Column -->
+                        <ng-container matColumnDef="dt_fat_relat">
+                            <th mat-header-cell *matHeaderCellDef> DATA_DE_FATURAMENTO_RELATÓRIO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.dt_fat_relat}} </td>
+                        </ng-container>
+
+                        <!-- marca Column -->
+                        <ng-container matColumnDef="marca">
+                            <th mat-header-cell *matHeaderCellDef> MARCA </th>
+                            <td mat-cell *matCellDef="let element"> {{element.marca}} </td>
+                        </ng-container>
+
+                        <!-- total_pecas_pedido Column -->
+                        <ng-container matColumnDef="total_pecas_pedido">
+                            <th mat-header-cell *matHeaderCellDef> TOTAL_PEÇAS_PEDIDO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.total_pecas_pedido}} </td>
+                        </ng-container>
+
+                        <!-- total_valor_pedido Column -->
+                        <ng-container matColumnDef="total_valor_pedido">
+                            <th mat-header-cell *matHeaderCellDef> TOTAL_VALOR_PEDIDO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.total_valor_pedido}} </td>
+                        </ng-container>
+
+                        <!-- nf Column -->
+                        <ng-container matColumnDef="qtde_embalada">
+                            <th mat-header-cell *matHeaderCellDef> QUANTIDADE_EMBALADA </th>
+                            <td mat-cell *matCellDef="let element"> {{element.qtde_embalada}} </td>
+                        </ng-container>
+
+                        <!-- valor_embalado Column -->
+                        <ng-container matColumnDef="valor_embalado">
+                            <th mat-header-cell *matHeaderCellDef> VALOR_EMBALADO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.valor_embalado}} </td>
+                        </ng-container>
+
+                        <!-- total_pecas_faturadas Column -->
+                        <ng-container matColumnDef="total_pecas_faturadas">
+                            <th mat-header-cell *matHeaderCellDef> TOTAL_PEÇAS_FATURADAS </th>
+                            <td mat-cell *matCellDef="let element"> {{element.total_pecas_faturadas}} </td>
+                        </ng-container>
+
+                        <!-- total_valor_faturado Column -->
+                        <ng-container matColumnDef="total_valor_faturado">
+                            <th mat-header-cell *matHeaderCellDef> TOTAL_VALOR_FATURADO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.total_valor_faturado}} </td>
+                        </ng-container>
+
+                        <!-- porcentagem_fat Column -->
+                        <ng-container matColumnDef="porcentagem_fat">
+                            <th mat-header-cell *matHeaderCellDef> PORCENTAGEM_FATURADA </th>
+                            <td mat-cell *matCellDef="let element"> {{element.porcentagem_fat}} </td>
+                        </ng-container>
+                        
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    </table>
                 </div>
+
+
+
         </div>
 
     </body>
