--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -17,12 +17,12 @@
 
         <!-- CONTENT -->
         <div id="content" class="row">
-            <h6 id="titulo" class="flow-text">WE_invoices</h6>
+            
                  
                 <!-- DROPDOWNS -->
-                <div class="col s12 m6 l8 offset-l3">
+                <div class="col s12">
 
-                    <mat-form-field id="marca">
+                    <mat-form-field class="col s5" id="marca">
                         <mat-label>Marca</mat-label>
                         <mat-select>
                             <mat-option>Todas</mat-option>
@@ -30,7 +30,7 @@
                         </mat-select>
                     </mat-form-field>
                 
-                    <mat-form-field id="colecao">
+                    <mat-form-field class="col s6" id="colecao">
                         <mat-label>Coleção</mat-label>
                         <mat-select>
                             <mat-option>Todas</mat-option>
@@ -38,18 +38,29 @@
                         </mat-select>
                     </mat-form-field>
 
-                    <mat-form-field id="colecao">
+                    <mat-form-field class="col s5" id="colecao">
                         <mat-label>Representante</mat-label>
                         <mat-select>
                             <mat-option>Todos</mat-option>
                             <mat-option *ngFor="let repre of repres" value="repre.agent_name">{{ repre.agent_name }}</mat-option>
                         </mat-select>
                     </mat-form-field>
+                
+                    <div class="input-field col s6">
+                        <input id="filtro" 
+                        class="input-field inline" 
+                        type="text"
+                        (keyup)="aplicarFiltro($event.target.value)">
+                        <label for="filtro">Filtro</label>
+                        <span class="helper-text">Filtrar por qualquer campo</span>
+                    </div>
+
                 </div>
+
 
                 <!-- FORM -->
                 <div id="formulario">
-                    <div class="input-field col s7 m7 l4 offset-m1 offset-l3">
+                    <div class="input-field col s9 l4 offset-l3">
                         <input id="buscar" 
                         class="input-field inline" 
                         type="text"
@@ -87,99 +98,103 @@
                     </table>
                 </div> -->
 
+                
 
 
-                <div class="example-container mat-elevation-z8 col s12">
+
+                <div class="example-container mat-elevation-z4 col s12">
   
-                    <table mat-table [dataSource]="dataSource" >
+                    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
                         <!-- cnpj Column -->
                         <ng-container matColumnDef="cnpj">
-                            <th mat-header-cell *matHeaderCellDef> CNPJ </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> CNPJ </th>
                             <td mat-cell *matCellDef="let element"> {{element.cnpj}} </td>
                         </ng-container>
                         
                         <!-- pedido_linx Column -->
                         <ng-container matColumnDef="pedido_linx">
-                            <th mat-header-cell *matHeaderCellDef> PEDIDO_LINX </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> PEDIDO_LINX </th>
                             <td mat-cell *matCellDef="let element"> {{element.pedido_linx}} </td>
                         </ng-container>
                         
                         <!-- pedido_wise Column -->
                         <ng-container matColumnDef="pedido_wise">
-                            <th mat-header-cell *matHeaderCellDef> PEDIDO_WISE </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> PEDIDO_WISE </th>
                             <td mat-cell *matCellDef="let element"> {{element.pedido_wise}} </td>
                         </ng-container>
                         
                         <!-- nf Column -->
                         <ng-container matColumnDef="nf">
-                            <th mat-header-cell *matHeaderCellDef> NF </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> NF </th>
                             <td mat-cell *matCellDef="let element"> {{element.nf}} </td>
                         </ng-container>
 
                         <!-- dt_faturamento Column -->
                         <ng-container matColumnDef="dt_faturamento">
-                            <th mat-header-cell *matHeaderCellDef> DATA_DE_FATURAMENTO </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> DATA_DE_FATURAMENTO </th>
                             <td mat-cell *matCellDef="let element"> {{element.dt_faturamento}} </td>
                         </ng-container>
 
                         <!-- dt_fat_relat Column -->
                         <ng-container matColumnDef="dt_fat_relat">
-                            <th mat-header-cell *matHeaderCellDef> DATA_DE_FATURAMENTO_RELATÓRIO </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> DATA_DE_FATURAMENTO_RELATÓRIO </th>
                             <td mat-cell *matCellDef="let element"> {{element.dt_fat_relat}} </td>
                         </ng-container>
 
                         <!-- marca Column -->
                         <ng-container matColumnDef="marca">
-                            <th mat-header-cell *matHeaderCellDef> MARCA </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> MARCA </th>
                             <td mat-cell *matCellDef="let element"> {{element.marca}} </td>
                         </ng-container>
 
                         <!-- total_pecas_pedido Column -->
                         <ng-container matColumnDef="total_pecas_pedido">
-                            <th mat-header-cell *matHeaderCellDef> TOTAL_PEÇAS_PEDIDO </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> TOTAL_PEÇAS_PEDIDO </th>
                             <td mat-cell *matCellDef="let element"> {{element.total_pecas_pedido}} </td>
                         </ng-container>
 
                         <!-- total_valor_pedido Column -->
                         <ng-container matColumnDef="total_valor_pedido">
-                            <th mat-header-cell *matHeaderCellDef> TOTAL_VALOR_PEDIDO </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> TOTAL_VALOR_PEDIDO </th>
                             <td mat-cell *matCellDef="let element"> {{element.total_valor_pedido}} </td>
                         </ng-container>
 
                         <!-- nf Column -->
                         <ng-container matColumnDef="qtde_embalada">
-                            <th mat-header-cell *matHeaderCellDef> QUANTIDADE_EMBALADA </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> QUANTIDADE_EMBALADA </th>
                             <td mat-cell *matCellDef="let element"> {{element.qtde_embalada}} </td>
                         </ng-container>
 
                         <!-- valor_embalado Column -->
                         <ng-container matColumnDef="valor_embalado">
-                            <th mat-header-cell *matHeaderCellDef> VALOR_EMBALADO </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> VALOR_EMBALADO </th>
                             <td mat-cell *matCellDef="let element"> {{element.valor_embalado}} </td>
                         </ng-container>
 
                         <!-- total_pecas_faturadas Column -->
                         <ng-container matColumnDef="total_pecas_faturadas">
-                            <th mat-header-cell *matHeaderCellDef> TOTAL_PEÇAS_FATURADAS </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> TOTAL_PEÇAS_FATURADAS </th>
                             <td mat-cell *matCellDef="let element"> {{element.total_pecas_faturadas}} </td>
                         </ng-container>
 
                         <!-- total_valor_faturado Column -->
                         <ng-container matColumnDef="total_valor_faturado">
-                            <th mat-header-cell *matHeaderCellDef> TOTAL_VALOR_FATURADO </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> TOTAL_VALOR_FATURADO </th>
                             <td mat-cell *matCellDef="let element"> {{element.total_valor_faturado}} </td>
                         </ng-container>
 
                         <!-- porcentagem_fat Column -->
                         <ng-container matColumnDef="porcentagem_fat">
-                            <th mat-header-cell *matHeaderCellDef> PORCENTAGEM_FATURADA </th>
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef> PORCENTAGEM_FATURADA </th>
                             <td mat-cell *matCellDef="let element"> {{element.porcentagem_fat}} </td>
                         </ng-container>
                         
                         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                     </table>
+                    
                 </div>
+                <mat-paginator class="col s12 mat-elevation-z8" [pageSizeOptions]="[5, 10, 20, 50, 100]" showFirstLastButtons></mat-paginator>
 
 
 
