--- a/src/app/invoices/invoices.component.css
+++ b/src/app/invoices/invoices.component.css
@@ -1,30 +1,60 @@
-/* NORMALIZE */
+/* ==================== NORMALIZE ===================== */
 * {
     margin: 0;
     padding: 0;
 }
-/* CONTENT */
+
+/* ============== SIDEBAR ============== */
+mat-sidenav-container {
+  height: 100%;
+}
+mat-sidenav, mat-sidenav-content {
+  padding: 1rem;
+}
+mat-sidenav {
+  background-color: #0277b1;
+  width: 300px;
+}
+#logo {
+  width: 180px;
+  float: left;
+}
+mat-nav-list {
+  margin-top: 3rem;
+}
+#invoices, #sair {
+  color: #fff;
+}
+#fecharmenu {
+  float: right;
+  text-align: right;
+}
+
+/* ===================== CONTENT ======================= */
 body {
     width: 100%;
     height: 100%;
     background-color: #fff;
 }
 #content {
-    width: 85%;
-    margin-left: 15%;
     padding: 5px;
 }
-#titulo {
-    margin-top: 5%;
-    font-size: 3rem;
-    font-style: bolder;
-    text-align: center;
+#abrirmenu {
+  float: left;
+  position: fixed;
+  z-index: 1;
 }
-#formulario {
-    margin-top: 5%;
+#marca {
+  margin-top: 3rem;
+}
+#formulario, #botao-buscar {
+  margin-top: 1rem;
+}
+#botao-buscar {
+  z-index: -1;
 }
 #tabela {
-    margin: 5% 0;
+    margin-top: 1rem;
     border-style: solid;
     border-width: 1px;
     border-color: rgba(151, 151, 151, 0.5);
@@ -44,64 +74,38 @@ body {
     border-color: rgba(151, 151, 151, 0.5);
 } 
 
-/* DROPDOWNS */
+/* ============================ DROPDOWNS =================================== */
 .mat-form-field {
-  margin-top: 5%;
-  margin-right: 1rem;
+  margin-top: 1rem;
 }
 
-
-
-
-
-
-
-.example-container {
-  margin-top: 5%;
+/* =============================== GRID INVOICES ================================ */
+.tabela-container {
+  margin-top: 1rem;
   height: 450px;
   width: 800px;
   overflow: auto;
 }
-
 table {
   width: 800px;
 }
-
 td.mat-column-star {
   width: 20px;
   padding-right: 8px;
 }
-
 th.mat-column-position, td.mat-column-position {
   padding-left: 8px;
 }
-
 th, td {
   border-right: 1px solid #e0e0e0;
   border-left: 1px solid #e0e0e0;
   text-align: center;
-
 }
-
 .mat-table-sticky:first-child {
   border-right: 1px solid #e0e0e0;
 }
 
-#filtro {
-  margin-top: 3%;
-}
-
-
-
-
-
-
-
-
-
-
-
-/* FORM */
+/* =========================== FORM DE CNPJ ============================== */
 /* label color */
 .input-field label {
     color: #000;
@@ -123,82 +127,19 @@ th, td {
 .btn:hover {
     background-color: #00aaff;
 }
-/* SIDEBAR */
-/* The side navigation menu */
-.sidebar {
-    margin: 0;
-    padding: 0;
-    width: 15%;
-    background-color: #0277bd;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
-  }
-  .sidebar a {
-    font-size: 1rem;
-    transition: font-size 0.5s, background-color 0.5s;
-  }
-  #logo {
-    width: 100%;
-    padding: 5px;
-  }
-  
-  /* Sidebar links */
-  .sidebar a {
-    display: block;
-    color: white;
-    padding: 16px;
-    text-decoration: none;
-  }
-  
-  /* Active/current link */
-  .sidebar a.active {
-    background-color: #4CAF50;
-    color: white;
-  }
-  
-  /* Links on mouse-over */
-  .sidebar a:hover:not(.active) {
-    background-color: #1e366c;
-    color: white;
-    font-size: 1.2rem;
-  }
-  
-  /* On screens that are less than 700px wide, make the sidebar into a topbar */
-  @media screen and (max-width: 700px) {
-    .sidebar {
-      width: 100%;
-      height: auto;
-      position: fixed;
-    }
-    .sidebar a {
-        float: right;
-    }
-    #marca, #colecao {
-      margin-top: 70px;
-    }
-    #logo {
-        width: 200px;
-        float: left;
-    }
-    #content {
-        width: 100%;
-        margin-left: 0;
-    }
 
-    .example-container {
-      height: 200px;
-    }
-    
+/* ========================== BREAKPOINTS - REPONSIVIDADE ========================== */
+
+/* ============== APARELHOS MÉDIOS - TABLETS E MONITORES PEQUENOS ===================== */
+@media screen and (max-width: 700px) {
+  .example-container {
+    height: 100px;
+  }
+}
   
+/* ========================== APARELHOS PEQUENOS - SMARTPHONES ======================== */
+@media screen and (max-width: 400px) {
+  .example-container {
+    height: 50px;
   }
-    
-  /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
-  @media screen and (max-width: 400px) {
-    .sidebar a {
-      float: right;
-    }
-    #logo { 
-        width: 150px;
-    }
-  }
+}
